--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -26,13 +26,12 @@
       </div>
     {% endif %}
 
+    {%- comment -%}
+      标题：统一做详情页链接
+    {%- endcomment -%}
     <h2 class="archive__item-title" itemprop="headline">
       {% if post.link %}
-        <a href="{{ post.link }}">{{ title }}</a>
-        <a href="{{ base_path }}{{ post.url }}" rel="permalink">
-          <i class="fa fa-link" aria-hidden="true" title="permalink"></i>
-          <span class="sr-only">Permalink</span>
-        </a>
+        <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
       {% else %}
         <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
       {% endif %}
@@ -68,30 +67,18 @@
     {% endif %}
 
     {%- comment -%}
-      对 publications：在列表页显示「精简 citation 行」
+      对 publications：列表页显示「精简 citation 行」
+      仅这一行文字，不再显示摘要
     {%- endcomment -%}
     {% if post.collection == 'publications' %}
       {% if post.citation %}
         <p class="archive__item-excerpt" style="font-size: 0.9em;" itemprop="description">
           {{ post.citation }}
         </p>
-      {% else %}
-        {%- comment -%}
-          如果有些条目没写 citation，也可以 fallback 成
-          “Author(s), "Title," Venue, Year” 的样式
-        {%- endcomment -%}
-        {% assign pub_year = post.date | default: "1900-01-01" | date: "%Y" %}
-        <p class="archive__item-excerpt" style="font-size: 0.9em;" itemprop="description">
-          {{ post.authors | default: "" }}
-          {% if post.authors %},{% endif %}
-          “{{ title }}”
-          {% if post.venue %}, <i>{{ post.venue }}</i>{% endif %}
-          {% if pub_year %}, {{ pub_year }}{% endif %}.
-        </p>
       {% endif %}
     {% else %}
       {%- comment -%}
-        非 publications collection 仍然保持原来的 excerpt / read more 逻辑
+        非 publications：保留原有 excerpt / read more 行为
       {%- endcomment -%}
       {% if post.excerpt and site.read_more != 'enabled' %}
         <p class="archive__item-excerpt" itemprop="description">
@@ -110,39 +97,31 @@
     {% endif %}
     
     {%- comment -%}
-      下面是「推荐引用 + 下载链接」区域（列表 / 详情都用同一套）  
-      如果你不想在列表页展示链接，可以在这里再加一层控制
+      对 publications：在列表里显示 Paper / Code / Bibtex 三个链接（若存在）
+      其它 collection 不显示这一块
     {%- endcomment -%}
-    {% if post.citation or post.paperurl or post.codeurl or post.slidesurl or post.bibtexurl %}
-      <p>
-        {% if post.citation %}
-          Recommended citation: {{ post.citation }}<br />
-        {% endif %}
+    {% if post.collection == 'publications' %}
+      {% if post.paperurl or post.codeurl or post.bibtexurl %}
+        <p style="font-size: 0.9em;">
+          {% assign first = true %}
 
-        {% assign first = true %}
+          {% if post.paperurl %}
+            <a href="{{ post.paperurl }}">Download Paper</a>
+            {% assign first = false %}
+          {% endif %}
 
-        {% if post.paperurl %}
-          <a href="{{ post.paperurl }}">Download Paper</a>
-          {% assign first = false %}
-        {% endif %}
+          {% if post.codeurl %}
+            {% unless first %} | {% endunless %}
+            <a href="{{ post.codeurl }}">Code</a>
+            {% assign first = false %}
+          {% endif %}
 
-        {% if post.codeurl %}
-          {% unless first %} | {% endunless %}
-          <a href="{{ post.codeurl }}">Code</a>
-          {% assign first = false %}
-        {% endif %}
-
-        {% if post.slidesurl %}
-          {% unless first %} | {% endunless %}
-          <a href="{{ post.slidesurl }}">Download Slides</a>
-          {% assign first = false %}
-        {% endif %}
-
-        {% if post.bibtexurl %}
-          {% unless first %} | {% endunless %}
-          <a href="{{ post.bibtexurl }}">Download Bibtex</a>
-        {% endif %}
-      </p>
+          {% if post.bibtexurl %}
+            {% unless first %} | {% endunless %}
+            <a href="{{ post.bibtexurl }}">Download Bibtex</a>
+          {% endif %}
+        </p>
+      {% endif %}
     {% endif %}
 
   </article>
