--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -51,8 +51,13 @@
       </p>
     {% elsif post.collection == 'publications' %}
       <p>
-        Published in <i>{{ post.venue }}</i>,
-        {{ post.date | default: "1900-01-01" | date: "%Y" }}
+        {% if post.status %}
+          <i>{{ post.venue }}</i>,
+          {{ post.status }}
+        {% else %}
+          Published in <i>{{ post.venue }}</i>,
+          {{ post.date | default: "1900-01-01" | date: "%Y" }}
+        {% endif %}
       </p>
     {% elsif post.date %}
       <p class="page__date">
